--- a/RestaurantSigloXXI/Vista/WPFAsignarMesa.xaml
+++ b/RestaurantSigloXXI/Vista/WPFAsignarMesa.xaml
@@ -1,14 +1,46 @@
-﻿<Page x:Class="Vista.WPFAsignarMesa"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Vista"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="WPFAsignarMesa">
+﻿<Controls:MetroWindow x:Class="Vista.WPFAsignarMesa"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                      
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      
+        xmlns:local="clr-namespace:Vista"
+        mc:Ignorable="d"
+        BorderThickness="2" BorderBrush="Black"
+        Title="Asignar Mesa" Height="560.304" Width="844.813" WindowTitleBrush="Black" WindowStyle="ToolWindow" Background="#FFD2DBEC" FontWeight="Bold" WindowStartupLocation="CenterScreen" Cursor="Arrow" Icon="Imagenes/LogoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Closing="MetroWindow_Closing"  >
+    <Grid Background="#FFDBDFE3">
+        <Image x:Name="image" HorizontalAlignment="Left" Height="572" VerticalAlignment="Top" Width="852" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-16.667,-13.333"/>
 
-    <Grid>
-        
+        <GroupBox x:Name="gbFiltrar" Header="Buscar Información" Margin="41,7,248.333,414.667"  Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+            <Grid HorizontalAlignment="Left" Height="73" Margin="10,4,0,-10.333" VerticalAlignment="Top" Width="596">
+                <Label x:Name="label_Copy" Content="Rut Cliente:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-1,1,0,0" Width="93" FontSize="12"/>
+                <TextBox x:Name="txtRut"  Controls:TextBoxHelper.Watermark="Ej. 11222333-1" HorizontalAlignment="Left" Height="23" Margin="81,1,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="128" FontWeight="Normal" Controls:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"/>
+                <Button x:Name="btnRut" Content="Buscar" HorizontalAlignment="Left" Margin="271,1,0,45" Width="75" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnRut_Click"/>
+                <Label x:Name="label_Copy1" Content="Nombre:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-1,32,0,0" Width="93" FontSize="12"/>
+                <Button x:Name="btnCrear" Content="Nuevo Cliente" HorizontalAlignment="Left" Margin="362,1,0,45" Width="98" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnNuevoCliente_Click"/>
+                <TextBox x:Name="txtNombre"  Controls:TextBoxHelper.Watermark="" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="81,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" FontWeight="Normal" SelectionBrush="#FFCB5F21"/>
+                <Button x:Name="btnLimpiar" Content="Limpiar" HorizontalAlignment="Left" Margin="385,33,0,0" VerticalAlignment="Top" Width="75"  FontWeight="Normal" Click="btnLimpiar_Click" Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12"/>
+                <Button x:Name="btnPregunta" Content="?" HorizontalAlignment="Left" Margin="225,1,0,0" VerticalAlignment="Top" Width="33"  FontWeight="Normal" Height="27" Cursor="Arrow"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnPregunta_Click"/>
+            </Grid>
+        </GroupBox>
+        <Image x:Name="images" HorizontalAlignment="Left" Margin="603,0,0,414.667" Width="156" Source="Imagenes/logoFinal3.png" Height="99" VerticalAlignment="Bottom"/>
+        <GroupBox x:Name="GroupBox_mesas" Header="Mesas" Margin="41,119,53.333,32.667"  Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21" >
+            <Grid>
+                <DataGrid x:Name="dgLista" Margin="24,10,23.333,66.667" FontWeight="Normal"></DataGrid>
+                <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="24,307,0,0" VerticalAlignment="Top" Width="75"  FontWeight="Normal" Click="btnSalir_Click" Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12"/>
+                <Button x:Name="btnRefrescar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="36"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Height="36" BorderBrush="Black" Click="btnRefrescar_Click" Margin="672,299,0,0"  >
+                    <Button.Background>
+                        <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="btnAsignar" Content="Asignar" HorizontalAlignment="Left" Margin="561,307,0,0" VerticalAlignment="Top" Width="75"  FontWeight="Normal" Click="btnAsignar_Click" Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12"/>
+            </Grid>
+        </GroupBox>
+
     </Grid>
-</Page>
+</Controls:MetroWindow>
