--- a/RestaurantSigloXXI/Vista/App.xaml
+++ b/RestaurantSigloXXI/Vista/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Vista"
-             StartupUri="WindowRecepcion.xaml">
+             StartupUri="WindowCocina.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
