--- a/RestaurantSigloXXI/Vista/WPFPlato.xaml
+++ b/RestaurantSigloXXI/Vista/WPFPlato.xaml
@@ -19,8 +19,6 @@
                 <TextBox x:Name="txtNomb" HorizontalAlignment="Left" Height="23" Margin="152,40,0,0" mah:TextBoxHelper.Watermark="Ingrese Nombre"  TextWrapping="Wrap" VerticalAlignment="Top" Width="144" mah:TextBoxHelper.ClearTextButton="True"  FontWeight="Normal"/>
                 <TextBox x:Name="txtPrecio" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Precio" Height="8" Margin="152,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
                 <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese una Descripción" Height="130" Margin="152,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="235" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="False" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
-                <RadioButton x:Name="rb_disponible" IsChecked="True" Content="Disponible" HorizontalAlignment="Left" Margin="152,244,0,0" VerticalAlignment="Top" FontWeight="Bold" />
-                <RadioButton x:Name="rb_NoDisponible" Content="No Disponible" HorizontalAlignment="Left" Margin="253,244,0,0" VerticalAlignment="Top" FontWeight="Bold" />
                 <ComboBox x:Name="cboReceta" HorizontalAlignment="Left" Margin="152,277,0,0" VerticalAlignment="Top" Width="144" FontWeight="Normal"/>
                 <ComboBox x:Name="cboCategoria" HorizontalAlignment="Left" Margin="152,310,0,0" VerticalAlignment="Top" Width="144" FontWeight="Normal"/>
 
@@ -33,9 +31,10 @@
 
                 <Label x:Name="label_Copy1" Content="Nombre:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" FontSize="12"/>
 
-                <Label x:Name="label_Copy3" Content="Estado:" HorizontalAlignment="Left" Margin="10,241,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy3" Content="Stock (U):" HorizontalAlignment="Left" Margin="10,241,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="label_Copy4" Content="Receta:" HorizontalAlignment="Left" Margin="10,277,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="label_Copy6" Content="Categoría:" HorizontalAlignment="Left" Margin="10,310,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <TextBox x:Name="txtStock" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Stock" Height="8" Margin="152,241,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
 
 
             </Grid>
