--- a/RestaurantSigloXXI/Vista/WPFPedidos.xaml
+++ b/RestaurantSigloXXI/Vista/WPFPedidos.xaml
@@ -19,7 +19,7 @@
         <GroupBox x:Name="gbFiltrar" Header="Filtrar Información" Margin="41,21,42.333,31"  Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
             <Grid HorizontalAlignment="Left" Height="416" Margin="10,4,-0.333,0" VerticalAlignment="Top" Width="823">
                 <Image x:Name="images" HorizontalAlignment="Left" Margin="636,0,0,336" Width="181" Source="Imagenes/logoFinal3.png"/>
-                <DataGrid x:Name="dgLista" Margin="29,85,42,0" VerticalAlignment="Top" Height="261" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" LoadingRow="dgLista_LoadingRow" >
+                <DataGrid x:Name="dgLista" Margin="29,85,42,0" VerticalAlignment="Top" Height="264" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" LoadingRow="dgLista_LoadingRow" >
 
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridCell}">
@@ -46,6 +46,9 @@
                 </Button>
                 <Button x:Name="btnCambiar" ToolTip="Cambiar estado de la Orden" Content="Cambiar Estado" HorizontalAlignment="Left" Margin="595,372,0,0" VerticalAlignment="Top" Width="112"  FontWeight="Normal" Click="btnCambiar_Click" Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12"/>
                 <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="163,3,0,0" VerticalAlignment="Top" FontWeight="Normal" Width="151"/>
+                <Label x:Name="label1" Content="Seleccione Estado: " HorizontalAlignment="Left" Margin="226,372,0,0" VerticalAlignment="Top" Width="124"/>
+                <RadioButton x:Name="rbListo" Content="Listo" HorizontalAlignment="Left" Height="24" Margin="498,372,0,0" VerticalAlignment="Top" GroupName="estado"/>
+                <RadioButton x:Name="rbPreparación" Content="En Preparación" HorizontalAlignment="Left" Height="24" Margin="370,372,0,0" VerticalAlignment="Top" GroupName="estado" IsChecked="True"/>
             </Grid>
         </GroupBox>
 
