--- a/RestaurantSigloXXI/Vista/WPFAgenda.xaml
+++ b/RestaurantSigloXXI/Vista/WPFAgenda.xaml
@@ -24,34 +24,29 @@
         </Image>
         <GroupBox x:Name="groupBox" Header="Información de Agenda" Margin="37,10,469,0" VerticalAlignment="Top" Height="415" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
             <Grid HorizontalAlignment="Left" Height="376" VerticalAlignment="Top" Width="375" Margin="0,-2,-0.333,0" Background="{x:Null}">
-                <Label x:Name="label_Copy" Content="Disponible:" HorizontalAlignment="Left" Margin="21,273,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy" Content="Disponible:" HorizontalAlignment="Left" Margin="21,284,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Calendar x:Name="dpFecha" HorizontalAlignment="Left" Margin="94,8,0,0" VerticalAlignment="Top" FontWeight="Normal" Width="183" Height="208" BorderBrush="#FFCB5F21" ToolTip="Seleccione Fecha"  />
 
                 <Button x:Name="btnGuardar" ToolTip="Guardar Registro" Content="Guardar" HorizontalAlignment="Left" Margin="107,345,0,0" VerticalAlignment="Top" Width="75" Cursor="Arrow" FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnGuardar_Click" Height="29"/>
                 <Button x:Name="btnCancelar" ToolTip="Cancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="283,345,0,0" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCancelar_Click" Height="29" VerticalAlignment="Top"/>
                 <Button x:Name="btnLimpiar" ToolTip="Limpiar casillas" Content="Limpiar" HorizontalAlignment="Left" Margin="10,345,0,2" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnLimpiar_Click"/>
-                <Label x:Name="label_Copy5" Content="Hora Inicio:" HorizontalAlignment="Left" Margin="21,239,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy5" Content="Hora Inicio:" HorizontalAlignment="Left" Margin="21,250,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Button x:Name="btnModificar" ToolTip="Actualizar registro" Content="Actualizar" HorizontalAlignment="Left" Margin="107,345,0,0" VerticalAlignment="Top" Cursor="Arrow" Width="80" FontWeight="Normal"   mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnModificar_Click" Height="29" />
                 <Label x:Name="lblId" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="23,2,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="label_Copy1" Content="Fecha:" HorizontalAlignment="Left" Margin="23,8,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Label x:Name="label_Copy3" Content="Mesa:" HorizontalAlignment="Left" Margin="21,304,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <ComboBox x:Name="cboMesa" HorizontalAlignment="Left" Margin="94,301,0,0" VerticalAlignment="Top" Width="103" FontWeight="Normal"/>
-                <TextBox x:Name="txtHora" HorizontalAlignment="Left" Height="23" Margin="94,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" IsEnabled="False"/>
-                <TextBox x:Name="txtMinuto" HorizontalAlignment="Left" Height="23" Margin="198,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" IsEnabled="False" />
-                <Button x:Name="btnMasHora" ToolTip="Aumentar Hora" Content="▲" HorizontalAlignment="Left" Margin="136,238,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMasHora_Click" />
-                <Button x:Name="btnMenosHora" ToolTip="Disminuir Hora" Content="▼" HorizontalAlignment="Left" Margin="160,239,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMenosHora_Click" />
-                <Button x:Name="btnMasMin" ToolTip="Aumentar Minutos" Content="▲" HorizontalAlignment="Left" Margin="240,238,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMasMin_Click" />
-                <Button x:Name="btnMenosMin" ToolTip="Didminuir Minutos" Content="▼" HorizontalAlignment="Left" Margin="265,238,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMenosMin_Click" />
-                <Label x:Name="label_Copy4" Content=":" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="183,239,0,0" RenderTransformOrigin="0.425,-0.798"/>
-                <RadioButton x:Name="rbSi" Content="Si" HorizontalAlignment="Left" Margin="107,277,0,0" VerticalAlignment="Top" IsChecked="True"/>
-                <RadioButton x:Name="RbNo" Content="No" HorizontalAlignment="Left" Margin="155,277,0,0" VerticalAlignment="Top"/>
-                <Label x:Name="label_Copy2" Content="* Las mesas tienen una disponibilidad de 1 hora desde su hora de Inicio" HorizontalAlignment="Left" Margin="21,213,0,0" VerticalAlignment="Top" FontSize="9.333" FontWeight="Normal" FontStyle="Italic" Width="314"/>
-                <Label x:Name="label_Copy6" Content="24 Hrs." HorizontalAlignment="Left" Margin="294,239,0,0" VerticalAlignment="Top" FontSize="12"/>
-
-
-
-
-
+                <Label x:Name="label_Copy3" Content="Mesa:" HorizontalAlignment="Left" Margin="21,315,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <ComboBox x:Name="cboMesa" HorizontalAlignment="Left" Margin="94,312,0,0" VerticalAlignment="Top" Width="103" FontWeight="Normal"/>
+                <TextBox x:Name="txtHora" HorizontalAlignment="Left" Height="23" Margin="94,250,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" IsEnabled="False"/>
+                <TextBox x:Name="txtMinuto" HorizontalAlignment="Left" Height="23" Margin="198,250,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" IsEnabled="False" />
+                <Button x:Name="btnMasHora" ToolTip="Aumentar Hora" Content="▲" HorizontalAlignment="Left" Margin="136,249,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMasHora_Click" />
+                <Button x:Name="btnMenosHora" ToolTip="Disminuir Hora" Content="▼" HorizontalAlignment="Left" Margin="160,250,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMenosHora_Click" />
+                <Button x:Name="btnMasMin" ToolTip="Aumentar Minutos" Content="▲" HorizontalAlignment="Left" Margin="240,249,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMasMin_Click" />
+                <Button x:Name="btnMenosMin" ToolTip="Didminuir Minutos" Content="▼" HorizontalAlignment="Left" Margin="265,249,0,0" VerticalAlignment="Top" Width="20"  FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnMenosMin_Click" />
+                <Label x:Name="label_Copy4" Content=":" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="183,250,0,0" RenderTransformOrigin="0.425,-0.798"/>
+                <RadioButton x:Name="rbSi" Content="Si" HorizontalAlignment="Left" Margin="107,288,0,0" VerticalAlignment="Top" IsChecked="True"/>
+                <RadioButton x:Name="RbNo" Content="No" HorizontalAlignment="Left" Margin="155,288,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_Copy2" Content="* Las mesas tienen una disponibilidad de 1 hora desde su hora de Inicio &#10; Considere que el horario de atención del local es de 11:00 a 22:00 hrs." HorizontalAlignment="Left" Margin="21,213,0,0" VerticalAlignment="Top" FontSize="9.333" FontWeight="Normal" FontStyle="Italic" Width="314"/>
+                <Label x:Name="label_Copy6" Content="24 Hrs." HorizontalAlignment="Left" Margin="296,250,0,0" VerticalAlignment="Top" FontSize="12"/>
 
             </Grid>
         </GroupBox>
