--- a/RestaurantSigloXXI/Vista/WPFStock.xaml
+++ b/RestaurantSigloXXI/Vista/WPFStock.xaml
@@ -10,77 +10,67 @@
         xmlns:local="clr-namespace:Vista"
         mc:Ignorable="d"
         BorderThickness="2" BorderBrush="Black"
-        Title="Administrar Stock de Producto" Height="628.311" Width="718.985" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontWeight="Bold" WindowTitleBrush="Black" Icon="Imagenes/logoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Background="#FFDBDFE3" Closing="MetroWindow_Closing" >
-    <Grid HorizontalAlignment="Left" Height="663" VerticalAlignment="Top" Width="709" Margin="0,0,0,-67">
-        <Image x:Name="image" HorizontalAlignment="Left" Height="600" VerticalAlignment="Top" Width="720" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-11,0"/>
-        <GroupBox x:Name="groupBox" Header="Información de Producto" Margin="22,3,20,0" VerticalAlignment="Top" Height="256" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
-            <Grid HorizontalAlignment="Left" Height="223" VerticalAlignment="Top" Width="657" Margin="0,-2,0,0" Background="{x:Null}">
-                <Label x:Name="label_Copy" Content="Valor Unitario($):" HorizontalAlignment="Left" Margin="27,64,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Label x:Name="label_Copy1" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="27,4,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Label x:Name="label_Copy2" Content="Stock:" HorizontalAlignment="Left" Margin="27,95,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Label x:Name="label_Copy4" Content="Valor Total ($):" HorizontalAlignment="Left" Margin="27,125,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.73,-0.613" Height="28" Width="90" FontSize="12"/>
-                <TextBox x:Name="txtNomProd" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Nombre Producto" Height="8" Margin="160,4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="195" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="0.5,0.5" SelectionBrush="#FFCB5F21"/>
-                <TextBox x:Name="txtCantidad" HorizontalAlignment="Left" KeyDown="txtNumeros_KeyDown" mah:TextBoxHelper.Watermark="Ingrese Cantidad" Height="8" Margin="160,34,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"/>
-                <RadioButton x:Name="RbKg" Content="Kg." HorizontalAlignment="Left" Margin="305,37,0,0" VerticalAlignment="Top" Width="50" FontWeight="Normal" GroupName="UMedida" IsChecked="True" FontSize="10.667"/>
-                <RadioButton x:Name="RbGr" Content="Gr." HorizontalAlignment="Left" Margin="351,37,0,0" VerticalAlignment="Top" Width="41" FontWeight="Normal" GroupName="UMedida" FontSize="10.667"/>
-                <RadioButton x:Name="RbMl" Content="Ml." HorizontalAlignment="Left" Margin="392,37,0,0" VerticalAlignment="Top" Width="43" FontWeight="Normal" GroupName="UMedida" FontSize="10.667"/>
-                <RadioButton x:Name="RbL" Content="L." HorizontalAlignment="Left" Margin="436,37,0,0" VerticalAlignment="Top" Width="37" FontWeight="Normal" GroupName="UMedida" FontSize="10.667"/>
-                <RadioButton x:Name="RbU" Content="U." HorizontalAlignment="Left" Margin="474,37,0,0" VerticalAlignment="Top" Width="39" FontWeight="Normal" GroupName="UMedida" FontSize="10.667"/>
-                <TextBox x:Name="txtValorUnidad" HorizontalAlignment="Left" KeyDown="txtNumeros_KeyDown" mah:TextBoxHelper.Watermark="Ingrese Valor (U)" Height="8" Margin="160,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"/>
-                <TextBox x:Name="txtStock" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Stock" KeyDown="txtNumeros_KeyDown" Height="8" Margin="160,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"/>
-                <TextBox x:Name="txtValorTotal" HorizontalAlignment="Left" IsEnabled="False" KeyDown="txtNumeros_KeyDown" mah:TextBoxHelper.Watermark="Valor Total" Height="8" Margin="160,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="135" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"  />
-                <ComboBox x:Name="cboTipoProducto" HorizontalAlignment="Left" Margin="160,159,0,0" VerticalAlignment="Top" Width="196" FontWeight="Normal"/>
-                <Button x:Name="btnGuardar" ToolTip="Guardar Registro" Content="Guardar" HorizontalAlignment="Left" Margin="119,191,0,0" VerticalAlignment="Top" Width="75" Cursor="Arrow" FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnGuardar_Click"/>
-                <Button x:Name="btnCancelar" ToolTip="Cancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="495,191,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCancelar_Click"/>
-                <Button x:Name="btnLimpiar" ToolTip="Limpiar Casillas" Content="Limpiar" HorizontalAlignment="Left" Margin="24,191,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnLimpiar_Click"/>
-                <Button x:Name="btnModificar" ToolTip="Actualizar Registro" Content="Actualizar" HorizontalAlignment="Left" Margin="119,191,0,0" VerticalAlignment="Top" Cursor="Arrow" Width="80" FontWeight="Normal"   mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnModificar_Click" />
+        Title="Administrar Stock de Producto" Height="408.311" Width="718.985" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontWeight="Bold" WindowTitleBrush="Black" Icon="Imagenes/logoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Background="#FFDBDFE3"  >
+    <Grid HorizontalAlignment="Left" Height="377" VerticalAlignment="Top" Width="709" Margin="0,0,0,-1">
+        <Image x:Name="image" HorizontalAlignment="Left" Height="393" VerticalAlignment="Top" Width="720" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.5" Margin="0,0,-11,-16"/>
+        <mah:Tile ToolTip="Administrar Stock de Productos" Margin="80,124,479,143" Click="Productos_Click" Height="Auto" mah:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
 
-                <Label x:Name="label_nom_tipo" Content="Tipo de Producto:" HorizontalAlignment="Left" Margin="27,159,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.253,0.463" FontSize="12"/>
-                <Button x:Name="btnCalcular" ToolTip="Calcular Total" Content="Calcular" HorizontalAlignment="Left" Margin="317,125,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCalcular_Click" Height="28"/>
-                <Label x:Name="lblId" Content="" HorizontalAlignment="Left" Margin="387,10,0,0" VerticalAlignment="Top" FontSize="12" Width="18"/>
-                <Image x:Name="image1" HorizontalAlignment="Left" Height="82" Margin="493,71,0,0" VerticalAlignment="Top" Width="130" Source="Imagenes/logoFinal3.png" RenderTransformOrigin="1.091,0.822"/>
-                <Label x:Name="label_Copy5" Content="Cantidad por Embase:" HorizontalAlignment="Left" Margin="27,34,0,0" VerticalAlignment="Top" FontSize="12"/>
+            <mah:Tile.Effect>
+                <DropShadowEffect Color="#FFCB5F21" BlurRadius="10" ShadowDepth="8"/>
+            </mah:Tile.Effect>
+            <Grid Height="110" Width="140" >
+                <Image x:Name="image1" Height="66" VerticalAlignment="Top" Source="Imagenes/Product.png" Margin="37,12,38,0">
+                    <Image.Effect>
+                        <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
+                    </Image.Effect>
+                </Image>
+                <Label x:Name="label1" Content="Productos"  HorizontalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" RenderTransformOrigin="0.5,0.5" Margin="32,76,30,0" Height="34" VerticalAlignment="Top" Width="78">
+                    <Label.Effect>
+                        <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
+                    </Label.Effect>
+                </Label>
 
             </Grid>
-        </GroupBox>
-        <GroupBox x:Name="groupBox1" Header="Respaldo Caché" HorizontalAlignment="Left" Height="64" Margin="22,524,0,0" VerticalAlignment="Top" Width="667" Background="#FFCB5F21" BorderBrush="#FFCB5F21">
-            <Grid Margin="0,0,0.333,-6.667">
+        </mah:Tile>
+        <mah:Tile ToolTip="Administrar Stock de Platos" Margin="279,123,279,143" Click="Platos_Click" Height="Auto" mah:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
 
-                <Label x:Name="label2" Content="Útimo Respaldo:" HorizontalAlignment="Left" Margin="47,1,0,10.667" FontWeight="Bold"/>
-                <Label x:Name="lblCache" Content="" HorizontalAlignment="Left" Margin="161,1,0,10.667" Width="193"/>
-                <Button x:Name="btnCache" ToolTip="Recuperar Caché" Content="Recuperar" HorizontalAlignment="Left" Margin="510,1,0,0" VerticalAlignment="Top" Width="75" Click="BtnCache_Click" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" FontWeight="Normal"/>
-
-            </Grid>
-        </GroupBox>
-        <GroupBox x:Name="groupBox_Copy" Header="Listado de Productos con bajo Stock" Margin="22,264,20,0" VerticalAlignment="Top" Height="255" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
-            <Grid HorizontalAlignment="Left" Height="225" VerticalAlignment="Top" Width="657" Margin="0,-2,0,-3" Background="{x:Null}">
-
-                <DataGrid x:Name="dgLista" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Height="147" Width="637" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" LoadingRow="dgLista_LoadingRow" >
-
-                    <DataGrid.Resources>
-                        <Style TargetType="{x:Type DataGridCell}">
-                            <Style.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter Property="Background" Value="#FFFAA575" />
-                                    <Setter Property="Foreground" Value="Black" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </DataGrid.Resources>
-                </DataGrid>
-                <Button x:Name="btnRefrescar" ToolTip="Refrescar" HorizontalAlignment="Left" Width="34"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderBrush="Black" Click="btnRefrescar_Click" Margin="610,185,0,0" Height="34" VerticalAlignment="Top"  >
-                    <Button.Background>
-                        <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
-                    </Button.Background>
-                </Button>
-                <Button x:Name="btnEliminar" ToolTip="Eliminar Registro" Content="Eliminar" HorizontalAlignment="Left" Margin="509,190,0,6" Width="75" FontWeight="Normal"   mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFDF0D0D" FontSize="12" Click="btnEliminar_Click"/>
-                <Button x:Name="btnPasar" ToolTip="Traspasar Información" Content="Traspasar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnPasar_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="10,190,0,0" Height="29"/>
-                <Button x:Name="btnFiltrar" ToolTip="Filtrar por Tipo de Producto" Content="Filtrar" HorizontalAlignment="Left" Margin="385,2,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnFiltrar_Click"/>
-                <ComboBox x:Name="cboTipFiltro" HorizontalAlignment="Left" Margin="160,2,0,0" VerticalAlignment="Top" Width="196" FontWeight="Normal"/>
-                <Label x:Name="label_nom_tipo_Copy" Content="Tipo de Producto:" HorizontalAlignment="Left" Margin="35,2,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.253,0.463" FontSize="12"/>
+            <mah:Tile.Effect>
+                <DropShadowEffect Color="#FFCB5F21" BlurRadius="10" ShadowDepth="8"/>
+            </mah:Tile.Effect>
+            <Grid Height="110" Width="140" >
+                <Image x:Name="image2" Height="76" VerticalAlignment="Top" Source="Imagenes/Soup-01.png" Margin="31,4,30,0">
+                    <Image.Effect>
+                        <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
+                    </Image.Effect>
+                </Image>
+                <Label x:Name="label2" Content="Platos"  HorizontalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" RenderTransformOrigin="0.5,0.5" Margin="41,76,34,0" Height="34" VerticalAlignment="Top" Width="65">
+                    <Label.Effect>
+                        <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
+                    </Label.Effect>
+                </Label>
 
             </Grid>
-        </GroupBox>
+        </mah:Tile>
+        <mah:Tile ToolTip="Administrar Stock de Bebidas" Margin="476,123,81,143" Click="Bebidas_Click" Height="Auto" mah:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
+
+            <mah:Tile.Effect>
+                <DropShadowEffect Color="#FFCB5F21" BlurRadius="10" ShadowDepth="8"/>
+            </mah:Tile.Effect>
+            <Grid Height="110" Width="140" >
+                <Image x:Name="image3" Height="68" VerticalAlignment="Top" Source="Imagenes/Beverage-Juice-01.png" Margin="45,8,30,0">
+                    <Image.Effect>
+                        <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
+                    </Image.Effect>
+                </Image>
+                <Label x:Name="label3" Content="Bebidas"  HorizontalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" RenderTransformOrigin="0.5,0.5" Margin="45,76,30,0" Height="34" VerticalAlignment="Top" Width="65">
+                    <Label.Effect>
+                        <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
+                    </Label.Effect>
+                </Label>
+
+            </Grid>
+        </mah:Tile>
+        <Image x:Name="image4" HorizontalAlignment="Left" Height="100" Margin="513,10,0,0" VerticalAlignment="Top" Width="170" Source="Imagenes/logoFinal3.png"/>
 
     </Grid>
 </Controls:MetroWindow>
